force-app/main/default/objects/GBase_Meeting__c/GBase_Meeting__c.object-meta.xml
<CustomObject>
    <label>GBase Meeting</label>
    <nameField>
        <displayFormat>MTG-{0000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GBase Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>