force-app/main/default/objects/GBase_Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GBase Meetings</relationshipLabel>
    <relationshipName>GBase_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>