force-app/main/default/objects/GBase_Meeting__c/fields/Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Result__c</fullName>
    <description>JSON format analysis result from GBase AI</description>
    <label>Analysis Result (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>