force-app/main/default/objects/GBase_Meeting__c/fields/Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Status__c</fullName>
    <label>Analysis Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Status of the GBase AI analysis for this meeting</description>
</CustomField>