force-app/main/default/objects/GBase_Meeting__c/fields/GBase_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>GBase_Job_Id__c</fullName>
    <description>Job ID returned from GBase API for tracking async processing</description>
    <externalId>true</externalId>
    <label>GBase Job ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>