force-app/main/default/objects/GBase_Meeting__c/fields/Meeting_Title__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Title__c</fullName>
    <label>Meeting Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>