force-app/main/default/objects/GBase_Meeting__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>GBase Meetings</relationshipLabel>
    <relationshipName>GBase_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>