force-app/main/default/objects/GBase_Meeting__c/validationRules/Audio_URL_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Audio_URL_Format</fullName>
    <active>true</active>
    <description>Validates that Audio URL starts with https://</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Audio_URL__c)),
    NOT(BEGINS(Audio_URL__c, "https://"))
)</errorConditionFormula>
    <errorDisplayField>Audio_URL__c</errorDisplayField>
    <errorMessage>Audio URL must start with https://</errorMessage>
</ValidationRule>