force-app/main/default/objects/GBase_Meeting__c/validationRules/Duration_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Positive</fullName>
    <active>true</active>
    <description>Duration must be a positive number</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Duration_Minutes__c)),
    Duration_Minutes__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Duration_Minutes__c</errorDisplayField>
    <errorMessage>Duration must be greater than 0 minutes</errorMessage>
</ValidationRule>