force-app/main/default/objects/GBase_Meeting__c/validationRules/Meeting_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Date_Not_Future</fullName>
    <active>true</active>
    <description>Meeting date cannot be in the future</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Meeting_Date__c)),
    DATEVALUE(Meeting_Date__c) &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Meeting date cannot be in the future</errorMessage>
</ValidationRule>