force-app/main/default/objects/GBase_Meeting__c/listViews/All_Meetings.listView-meta.xml
<ListView>
    <fullName>All_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Title__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Meetings</label>
</ListView>