force-app/main/default/objects/GBase_Meeting__c/listViews/Completed_Meetings.listView-meta.xml
<ListView>
    <fullName>Completed_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Title__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Meetings</label>
</ListView>