force-app/main/default/objects/GBase_Meeting__c/listViews/My_Meetings.listView-meta.xml
<ListView>
    <fullName>My_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Title__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetings</label>
</ListView>