force-app/main/default/objects/GBase_Meeting__c/listViews/Recent_Meetings.listView-meta.xml
<ListView>
    <fullName>Recent_Meetings</fullName>
    <label>Recent Meetings (This Week)</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <columns>NAME</columns>
    <columns>Meeting_Title__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
</ListView>